crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_1.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/list/missing_closing_bracket_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..133,
        body: [
            Expr(
                ExprStmt {
                    range: 125..133,
                    value: List(
                        ListExpr {
                            range: 125..133,
                            elts: [
                                BinOp(
                                    BinOpExpr {
                                        range: 128..133,
                                        left: Name(
                                            NameExpr {
                                                range: 128..129,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 132..133,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | [
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
