crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__list__recover.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/list/recover.py
---
## AST

```
Module(
    ModModule {
        range: 0..208,
        body: [
            Expr(
                ExprStmt {
                    range: 82..85,
                    value: List(
                        ListExpr {
                            range: 82..85,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 83..83,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 87..93,
                    value: List(
                        ListExpr {
                            range: 87..93,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 88..89,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 91..92,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 95..100,
                    value: List(
                        ListExpr {
                            range: 95..100,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 96..97,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 118..123,
                    value: List(
                        ListExpr {
                            range: 118..123,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 119..120,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 121..122,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 156..162,
                    value: List(
                        ListExpr {
                            range: 156..162,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 157..158,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 160..161,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 185..194,
                    value: List(
                        ListExpr {
                            range: 185..194,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 186..187,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    BinOpExpr {
                                        range: 189..192,
                                        left: Name(
                                            NameExpr {
                                                range: 189..190,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 192..192,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 196..202,
                    value: List(
                        ListExpr {
                            range: 196..202,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 197..198,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 200..201,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 204..207,
                    value: List(
                        ListExpr {
                            range: 204..207,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 205..206,
                                        value: Name(
                                            NameExpr {
                                                range: 206..206,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Test cases for list expressions where the parser recovers from a syntax error.
2 | 
3 | [,]
  |  ^ Syntax Error: Expected an expression
4 | 
5 | [1,,2]
  |


  |
3 | [,]
4 | 
5 | [1,,2]
  |    ^ Syntax Error: Expected an expression or a ']'
6 | 
7 | [1,,]
  |


  |
5 | [1,,2]
6 | 
7 | [1,,]
  |    ^ Syntax Error: Expected an expression or a ']'
8 | 
9 | # Missing comma
  |


   |
 9 | # Missing comma
10 | [1 2]
   |    ^ Syntax Error: Expected ',', found int
11 | 
12 | # Dictionary element in a list
   |


   |
12 | # Dictionary element in a list
13 | [1: 2]
   |   ^ Syntax Error: Expected an expression or a ']'
14 | 
15 | # Missing expression
   |


   |
15 | # Missing expression
16 | [1, x + ]
   |         ^ Syntax Error: Expected an expression
17 | 
18 | [1; 2]
   |


   |
16 | [1, x + ]
17 | 
18 | [1; 2]
   |   ^ Syntax Error: Expected an expression or a ']'
19 | 
20 | [*]
   |


   |
18 | [1; 2]
19 | 
20 | [*]
   |   ^ Syntax Error: Expected an expression
   |
